--- a/atividade 1/atividade 1.html
+++ b/atividade 1/atividade 1.html
@@ -1,17 +1,20 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="atividade 1.css">
-    </head>
-    <body>
-        <div class="VisualContainer">
-            <h1>TESTE, teste, Teste</h1>
+<!DOCTYPE html>
+<html lang="pt_br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/atividade 1/atividade 1.css">
+</head>
+<body>
+    <div class="VisualContainer">
+        <h1>TESTE, teste, Teste</h1>
             <div class="Texto">
-                <label><input type="text" size="80" id="descricao" name="LBdes" placeholder="Descricao do produto" /></label>
-                <label><input type="text" size="10" id="descricao" name="LBdpreco" placeholder="preco do produto" /></label>
+                <label><input type="text" id="descricao" name="LBdes" placeholder="Descricao do produto" /></label>
+                <label><input type="text"  id="descricao" name="LBdpreco" placeholder="preco do produto" /></label>
             </div>
-            <button id="cadastrar" class="VisualBtn">Cadastrar</button>
-            <button id="Deletar" class="VisualBtn">Deletar</button>
-        </div>
-
-    </body>
+        <button id="cadastrar" class="VisualBtn">Cadastrar</button>
+        <button id="Deletar" class="VisualBtn">Deletar</button>
+    </div>
+</body>
 </html>
