--- a/atividade 1/atividade 1.html
+++ b/atividade 1/atividade 1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/atividade 1/atividade 1.css">
+    <link rel="stylesheet" href="C:\Users\PICHAU\Documents\github\Repositorio\atividade 1\atividade 1.css">
 </head>
 <body>
     <div class="VisualContainer">
